# cppcnn

./: .gitignore  CMakeLists.txt  Dockerfile  README.MD  main.cpp
